- implemented IOC-263 - Add new debugger diagnostics - tracked objects
- fixed IOC-262 objects created via UsingFactoryMethod are always tracked, even if they could safely not be
- fixed 	IOC-260 - Generic Typed Factories no longer working in trunk
- implemented IOC-257 - Same as in code, specifying type for facility in XML should be enough - Id should be optional
- implemented IOC-256 - Same as in code, specifying type for component in XML should be enough - Id should be optional
- implemented IOC-255 - Specifying custom lifestyle type in XML should be enough, for it to be picked up
- fixed IOC-254 - Optional non-primitive .ctor parameters don't work
- fixed bug with NullReferenceException when TypedFactoryFacility is used and disposed
- fixed IOC-250 - Dispose not being called on open generic registrations
- IServiceProviderEx was removed as base interface for IWindsorContainer and IKernel
- completed IOC-249 - Remove aility to remove components from the Container
- Removed the following types: ContainerAdapter, ContainerWrapper, IContainerAdapter, IContainerAdapterSite types
- fixed IOC-248 - Open generic components with multiple services, some of which are generic fail to properly instantiate in certain cases
- fixed IOC-247 - Make ComponentModel/IHandler expose all services for given component, instead of piggybacking them via ForwardedHandlers
- implemented IOC-246 - Remove alternative naming subsystems
- fixed IOC-245 - Proxies (for interface services) should not implicitly proxy all interfaces that the service implementation type happens to implement
- implemented IOC-243 - Remove obsolete UseSingleInterfaceProxy option

2.5.2 (2010-11-15)
==================
- implemented IOC-243 - Unseal the InterceptorAttribute class
- fixed IOC-239 - ArrayResolver attempts to instantiate an unresolvable array dependency
- fixed IOC-238 - Resolving Composite depending on a Decorator may fire up cycle detection fuse